Production/Production/src/objects/No_Triggers__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Global flags for trigger exemptions</description>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_P2P_Setup_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, then no Communication will be sent to the client when a Promise to Pay is setup. To be used for data migration.</description>
        <label>Skip P2P Setup Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_PP_Setup_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, then no Communication will be sent to the client when a Payment Plan is setup. To be used for data migration.</description>
        <label>Skip PP Setup Communication</label>
        <type>Checkbox</type>
    </fields>
    <label>No Triggers</label>
</CustomObject>